src/core-crm/objects/Asset/fields/Actual_Remaining_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Remaining_Value__c</fullName>
    <formula>Total_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Remaining Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>