src/core-crm/objects/Asset/fields/Advantage_Type__c.field-meta.xml
<CustomField>
    <fullName>Advantage_Type__c</fullName>
    <label>Advantage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Advantage</fullName>
            </value>
            <value>
                <fullName>Corporate Bundle</fullName>
            </value>
            <value>
                <fullName>Professional Advantage</fullName>
                <isActive>false</isActive>
                <label>Professional Advantage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>