src/core-crm/objects/Asset/fields/Mark_Design_Stage_as_Complete__c.field-meta.xml
<CustomField>
    <fullName>Mark_Design_Stage_as_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if the user has completed the Asset modification.</description>
    <label>Mark Design Stage as Complete</label>
    <type>Checkbox</type>
</CustomField>