src/core-crm/objects/Asset/fields/Pending_Value__c.field-meta.xml
<CustomField>
    <fullName>Pending_Value__c</fullName>
    <label>Pending Value</label>
    <summarizedField>Product_Ledger__c.Purchased_Price_v2__c</summarizedField>
    <summaryFilterItems>
        <field>Product_Ledger__c.Course_Offering_End_Date_Checker__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Ledger__c.Asset__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>