src/core-crm/objects/Asset/fields/Product_Request__c.field-meta.xml
<CustomField>
    <fullName>Product_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Request</label>
    <referenceTo>Product_Request__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>