src/core-crm/objects/Asset/fields/Publishing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Publishing_End_Date__c</fullName>
    <label>Publishing End Date</label>
    <type>Date</type>
</CustomField>