src/core-crm/objects/Asset/fields/Remaining_Value__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Value__c</fullName>
    <formula>Total_Value__c - Pending_Value__c -  Utilised_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total remaining credit balance</inlineHelpText>
    <label>Remaining Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>