src/core-crm/objects/Asset/fields/Sharing__c.field-meta.xml
<CustomField>
    <fullName>Sharing__c</fullName>
    <description>Used to categorise records for sharing purpose</description>
    <label>Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>