src/core-crm/objects/Asset/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <inlineHelpText>The total value of the Corporate Bundle</inlineHelpText>
    <label>Total Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>