src/core-crm/objects/Asset/fields/Utilised_Value__c.field-meta.xml
<CustomField>
    <fullName>Utilised_Value__c</fullName>
    <label>Utilised Value</label>
    <summarizedField>Product_Ledger__c.Purchased_Price__c</summarizedField>
    <summaryForeignKey>Product_Ledger__c.Asset__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>