src/core-crm/objects/Asset/validationRules/DecommReason_EndDate_must_be_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>DecommReason_EndDate_must_be_entered</fullName>
    <active>true</active>
    <description>Decommission Reason and End Date must be entered</description>
    <errorConditionFormula>AND
(
Decommission__c = true,

OR( ISBLANK(Decommission_Reason__c),
ISNULL(End_Date__c )
)


)</errorConditionFormula>
    <errorDisplayField>Decommission__c</errorDisplayField>
    <errorMessage>Please ensure the Decommission Reason and End Date is populated</errorMessage>
</ValidationRule>