src/core-crm/objects/Asset/validationRules/DecommReason_PubEndDate_must_be_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>DecommReason_PubEndDate_must_be_entered</fullName>
    <active>false</active>
    <description>Decommission Reason and Publishing End Date must be entered</description>
    <errorConditionFormula>AND
(
Decommission__c = true,

OR( ISBLANK(Decommission_Reason__c),
ISNULL(Publishing_End_date__c )
)


)</errorConditionFormula>
    <errorDisplayField>Decommission__c</errorDisplayField>
    <errorMessage>Please ensure the Decommission Reason and Publishing End Date is populated</errorMessage>
</ValidationRule>